<resources>
    <string name="app_name">Covid Helper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="change_inform">Change Information</string>
    <string name="change_password">Change Password</string>
    <string name="announcement">Announcement</string>
    <string name="dashboard">Dashboard</string>
    <string name="check_in">Check-in</string>
    <string name="hotspot_icon">hotspot icon</string>
    <string name="hotspot">Hotspot</string>
    <string name="vaccination">Vaccination</string>
    <string name="vaccination_icon">Vaccination icon</string>
    <string name="icon_of_covid_19_test_kit">Icon of Covid-19 test kit</string>
    <string name="self_test_result">Self-test result</string>
    <string name="icon_of_risk_assessment">icon of risk assessment</string>
    <string name="risk_assessment">Risk assessment</string>
    <string name="sos_icon">SOS icon</string>
    <string name="call_ambulance">Call ambulance</string>
    <string name="icon_to_check_sops">icon to check SOPs</string>
    <string name="current_sops">Current SOPs</string>
    <string name="daily_new_cases">Daily new cases</string>
    <string name="_7_days_avg">(7 days avg.)</string>
    <string name="dummy_number">4378</string>
    <string name="virus_icon">virus icon</string>
    <string name="triangle_to_show_the_trend">triangle to show the trend</string>
    <string name="death_of_last_7_days">Death of last 7 days</string>
    <string name="grave_yard_icon">grave yard icon, to signify number of death</string>
    <string name="vaccination_status">Vaccination Status</string>
    <string name="single_syringe_icon_description">icon of single syringe, to represent first dose of vaccination</string>
    <string name="double_syringe_icon_description">icon of double syringe, to represent second dose of vaccination</string>
    <string name="in_depth_statistic">In-Depth Statistic</string>
    <string name="faq">FAQ</string>
    <string name="dummy_faq_question">What is endemic?</string>
    <string name="faq_dummy_answer">Endemics are a constant presence in a specific location. Malaria is endemic to parts of Africa.</string>
    <string name="state">State:</string>
    <string name="compulsory_regardless_of_phases">Compulsory regardless of phases</string>
    <string name="icon_of_social_distancing">Icon of social distancing</string>
    <string name="practice_social_distance_whenever_possible">Practice social distance whenever possible</string>
    <string name="mask_on_when_you_are_not_at_home">Mask on, when you are not at home</string>
    <string name="icon_of_a_mask">Icon of a mask</string>
    <string name="wash_your_hands_regularly">Wash your hands regularly</string>
    <string name="sops_in">SOPs in</string>
    <string-array name="states">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Melacca</item>
        <item>Pahang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Pinang</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Sembilan</item>
        <item>Terengganu</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Putrajaya</item>
    </string-array>
    <string name="phase_3">Phase 3</string>
    <string name="indicates_only_allowed_for_vaccinated_individuals">indicates only allowed for vaccinated individuals</string>
    <string name="icon_of_a_knife_and_spoon_to_represent_dine_in">Icon of a knife and spoon to represent dine in</string>
    <string name="dine_in">Dine-in</string>
    <string name="social_activity">Social Activity</string>
    <string name="icon_activity_status">icon to show if the activity is allowed</string>
    <string name="champagne_glass_icon_description">Icon to two Champagne glass to represent social activity</string>
    <string name="sport">Sports</string>
    <string name="non_contact_activity_in_open_area">Non-contact activity in open space</string>
    <string name="contact_and_non_contact_activity_in_closed_area">Contact and non-contact activity in closed space</string>
    <string name="icon_of_a_car_to_represent_travelling">Icon of a car to represent travelling</string>
    <string name="travel_between_district_within_a_state">Travel between district within a state</string>
    <string name="inter_state_travel">Inter-state travel</string>
    <string name="travel">Travel</string>
    <string name="icon_of_a_school">Icon of a school</string>
    <string name="school">School</string>
    <string name="exam_class">Exam class</string>
    <string name="non_exam_class">Non-exam class</string>
    <string name="visit_nrp_s_official_website">Visit NRP\'s official website</string>
    <string name="for_complete_sops">For complete SOPs:</string>
    <string name="select_your_test_result">Select your test result</string>
    <string name="positive">Positive</string>
    <string name="image_of_the_test_kit_with_positive_result">Image of the test kit with positive result</string>
    <string name="negative">Negative</string>
    <string name="image_of_the_test_kit_with_invalid_result">Image of the test kit with invalid result</string>
    <string name="invalid_result">Invalid result</string>
    <string name="image_of_the_test_kit_with_negative_result">Image of the test kit with negative result</string>
    <string name="submit">Submit</string>
    <string name="previously_completed_task">Previously completed task</string>
    <string name="following_task">Following task</string>
    <string name="current_task">Current task</string>
    <string name="dose_1">Dose 1</string>
    <string name="vaccine_wait_14_days_message">After receiving two dosages of vaccine, your body still need 14 days to produce sufficient amount of antibody.</string>
    <string name="covid_19_vaccination_registration_form_title">Covid-19 vaccination registration form</string>
    <string name="vaccination_form_description">Vaccination program has been rolled out by the Malaysia government on 04 February 2021. All residents in Malaysia (including non-Malaysian) aged 18 and above are eligible to apply and it is completely free of charge! Fill up the form to apply now.</string>
    <string name="name">Name:</string>
    <string name="name_no_colon">Name</string>
    <string name="default_name">Chua Tuan Hong</string>
    <string name="ic_passport">IC / Passport Number:</string>
    <string name="current_staying_location">Current staying location:</string>
    <string name="vaccine_current_location_extra_message">Vaccination location will be assigned based on where you currently stay.</string>
    <string name="default_state">Selangor</string>
    <string name="state_no_colon">State</string>
    <string name="postcode">Postcode</string>
    <string name="postcode_with_colon">Postcode:</string>
    <string name="default_postcode">43900</string>
    <string name="confirm_and_submit">Confirm and Submit</string>
    <string name="default_ic_number">990310032949</string>
    <string name="registered">Registered</string>
    <string name="registration_successful_message">Congratulation, you have successfully registered! Below is your submitted information.</string>
    <string name="change_info">Change Info</string>
    <string name="vaccine_appointment">Vaccine Appointment</string>
    <string name="icon_of_map_marker">Icon of map marker</string>
    <string name="default_vaccination_location">Complex Sukan Pagoh</string>
    <string name="default_vaccination_date">02-08-2021</string>
    <string name="default_vaccination_time">08:30 AM</string>
    <string name="icon_of_clock">Icon of a clock</string>
    <string name="icon_calendar">Icon of a calendar</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="change_date">Change Date</string>
    <string name="appointment_confirmed_message">Your appointment has been confirmed</string>
    <string name="icon_description_triangle_outline">Icon to indicate the FAQ is expanded or not</string>
    <string name="in_depth_stat_duration">Period: 2 weeks</string>
    <string name="in_dept_stat_descriptive_message">In this page, we are showing some important statistics over the last 14 days to let you understand the current situation.</string>
    <string name="default_latest_data_update_date">Data as of 22 Oct 2021, 12am</string>
    <string name="total_new_cases_of_each_state">Total New Cases of each state</string>
    <string name="in_depth_stat_total_cases_description">Total number of cases for the last 14 days per 10k of population.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="text_slogan">Work together to overcome the epidemic</string>
    <string name="login">Log in</string>
    <string name="hint_number">IC/Passport number</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="text_no_account_sign_up">Don’t have an account? Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_name">Full name</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_retype_password">Retyped password</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="text_have_account_login">Already have an account? Login</string>
    <string name="map_key" translatable="false">AIzaSyAyBaCg8lUc0Wmd9XEDE4pMh4aYvG-uQaY</string>
    <string name="text_hotspot_description">The map below shows the Covid-19 outbreaks around your current location, while the size of the red circle reflects the number of cases involved. </string>
    <string name="text_risk_assessment_description">This is not a Covid-19 diagnostic tool! The only purpose of this assessment is to let you to know your risk of being infected by the virus. If you suspect that you have been infected, you are advised to have a PCR test. </string>
    <string name="text_multi_choice_instruction">Select all that applies</string>
    <string name="text_question1_description">1. Are you exhibiting the following symptoms?</string>
    <string name="text_question1_choice1">Fever</string>
    <string name="text_question1_choice2">Chills</string>
    <string name="text_question1_choice3">Body ache</string>
    <string name="text_question1_choice4">Headache</string>
    <string name="text_question1_choice5">Sore throat</string>
    <string name="text_question1_choice6">Runny nose or nasal congestion</string>
    <string name="text_question2_description">2. Besides the above, are you exhibiting the following symptoms?</string>
    <string name="text_question2_choice1">Cough</string>
    <string name="text_question2_choice2">Shortness of breath</string>
    <string name="text_question2_choice3">Loss of smell</string>
    <string name="text_question2_choice4">Loss of taste</string>
    <string name="text_question3_description">3. Have you attended any event associated with known Covid-19 cluster?</string>
    <string name="text_question4_description">4. Have you travelled to any country outside of Malaysia within the last 14 days?</string>
    <string name="text_question5_description">5. Are you close contact of any confirmed case of Covid-19 within the last 14 days?</string>
    <string name="text_question6_description">6. Are you a MOH Covid-19 volunteer within the last 14 days?</string>
    <string name="text_single_choice1">Yes</string>
    <string name="text_single_choice2">No</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_check_in">Check-in new location</string>
    <string name="title_risk_status">COVID -19 Risk Status</string>
</resources>