<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.covidhelper.ui.dashboard.HotspotFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_hotspot" />
<!--    <fragment-->
<!--        android:id="@+id/dashboardFragment"-->
<!--        android:name="com.example.covidhelper.ui.dashboard.DashboardFragment"-->
<!--        android:label="@string/dashboard"-->
<!--        tools:layout="@layout/fragment_dashboard" />-->
    <fragment
        android:id="@+id/checkInFragment"
        android:name="com.example.covidhelper.ui.checkIn.CheckInFragment"
        android:label="@string/check_in"
        tools:layout="@layout/fragment_check_in">
        <action
            android:id="@+id/action_check_in_to_check_in_history"
            app:destination="@id/checkInHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkInHistoryFragment"
        android:name="com.example.covidhelper.ui.checkIn.CheckInHistoryFragment"
        android:label="Check_in History"
        tools:layout="@layout/fragment_check_in_history" />
    <fragment
        android:id="@+id/announcementFragment"
        android:name="com.example.covidhelper.ui.announcement.AnnouncementFragment"
        android:label="@string/announcement"
        tools:layout="@layout/fragment_announcement" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.covidhelper.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>