<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/faq_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/faq_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_faq_question"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/grey_medium"/>

        <ImageView
            android:id="@+id/faq_EndTriangle"
            android:layout_width="20dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_triangle_outline"
            android:contentDescription="@string/icon_description_triangle_outline"
            android:rotation="180"/>

    </LinearLayout>

    <TextView
        android:id="@+id/faq_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/faq_dummy_answer"
        android:textColor="@color/grey_dark"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"/>

</LinearLayout>