<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:clipChildren="false"
    tools:context=".ui.dashboard.tools.selfTest.ReportSelfTestFragment"
    android:background="@color/blue_very_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_test_result"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:clipChildren="false">

<!--            Positive card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selfTest_positive_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/positive"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/test_kit_result_positive"
                        android:contentDescription="@string/image_of_the_test_kit_with_positive_result"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

<!--            Negative card-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selfTest_negative_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/negative"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/test_kit_result_negative"
                        android:contentDescription="@string/image_of_the_test_kit_with_negative_result"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>

        <!--            Invalid card-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/selfTest_invalid_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invalid_result"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/test_kit_result_invalid"
                    android:contentDescription="@string/image_of_the_test_kit_with_invalid_result"/>


            </LinearLayout>



        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selfTest_button_submit"
            android:theme="@style/Theme.MaterialComponents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="6dp"
            android:layout_gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_medium"
            android:text="@string/submit"/>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>